force-app/main/default/objects/Opportunity/fields/Lieferstandort__c.field-meta.xml
<CustomField>
    <fullName>Lieferstandort__c</fullName>
    <label>Lieferstandort</label>
    <length>30</length>
    <type>Text</type>
</CustomField>