force-app/main/default/objects/Opportunity/fields/priorization__c.field-meta.xml
<CustomField>
    <fullName>priorization__c</fullName>
    <defaultValue>&apos;low&apos;</defaultValue>
    <label>priorization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>high</fullName>
            </value>
            <value>
                <fullName>middle</fullName>
            </value>
            <value>
                <fullName>low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>