force-app/main/default/objects/Opportunity/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product_Family</label>
    <length>30</length>
    <type>Text</type>
</CustomField>